Fix retina icon size causing alignment issues

--- a/src/leaflet.buffer.css
+++ b/src/leaflet.buffer.css
@@ -5,7 +5,7 @@
 
 .leaflet-retina .leaflet-draw-toolbar a {
 	background-image: url('images/spritesheet-2x.png');
-	background-size: 390px 30px;
+	background-size: 330px 30px;
 }
 
 .leaflet-draw-toolbar .leaflet-draw-edit-buffer {
